# StepRoast

./: .dockerignore  .gitignore  Dockerfile  README.md  summary.md
.devcontainer/: devcontainer.json
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  steproast_judge.md
backend/processors/: footwork_processor.py
mobile/: App.tsx  app.json  package.json  tsconfig.json
mobile/src/components/: ScoreCard.tsx  VibeMeter.tsx
mobile/src/hooks/: useStepRoastAgent.ts
mobile/src/screens/: HomeScreen.tsx  JudgeScreen.tsx
